Send ContentStateChanged notifications for the checked state with correct BeginUpdate and EndUpdate calls and even when there is no frame, except during element construction.  b=231081  r=bzbarsky  sr=jst